--- a/HSTUTU_HFT_2021221.WpfClient/App.xaml
+++ b/HSTUTU_HFT_2021221.WpfClient/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:HSTUTU_HFT_2021221.WpfClient"
-             StartupUri="Windows/BlogWindow.xaml">
+             StartupUri="Windows/MainWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
